# snake-ladders

./: .gitignore  CMakeLists.txt  List.h  Queues.cpp  README.MD  Window.cpp  log.txt
docs/: boxProperties.txt  link.docx
src/: Box.h  Game.cpp  Game.h  List.cpp  List.h  Queues.h  Render.cpp  Render.h  Window.cpp  Window.h  main.cpp
terminalVersion/: Box.h  Game.cpp  Game.h  Player.cpp  Player.h  Queue.cpp  Queue.h  main.cpp  readme.txt
